--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "django-simple-notifications"
-version = "0.0.2"
+dynamic = ["version"]
 description = "A simple Django app for notifications"
 readme = "README.md"
 authors = [
@@ -29,8 +29,12 @@ Homepage = "https://github.com/Yxmaxy/django-simple-notifications"
 Repository = "https://github.com/Yxmaxy/django-simple-notifications.git"
 
 [tool.setuptools]
+package-dir = {"" = "backend"}
 packages = ["simple_notifications"]
 include-package-data = true
 
 [tool.setuptools.package-data]
 "simple_notifications" = ["migrations/*.py", "migrations/*/*.py", "templates/*.txt"]
+
+[tool.setuptools.dynamic]
+version = {file = "version.txt"}
